# A1_Maze_CPP

./: .gitignore  Makefile  read.md
backend/: include.h
backend/cave/: cave_draw.cc  cave_main.cc  cave_parser.cc  cave_parser.h
backend/common/: file.cc  includes.h  parser.h  parser_main.cc  utils.h
backend/console/: cave.cc  maze_drawing.cc  maze_gen.cc  maze_solve.cc
backend/maze/: maze.h
backend/maze/generator/: class_gen.cc  class_gen.h  maze_generator.cc  maze_save.cc  save.cc
backend/maze/main/: maze_draw.cc  maze_main.cc  maze_parser.cc  maze_parser.h
backend/maze/parser/: maze_draw_console.cc  maze_draw_vector.cc  maze_parser.cc  maze_read.cc
backend/maze/solver/: class_solver.cc  class_solver.h  maze_solver.cc  maze_test_draw.cc  test_draw.cc
files/: cave_01_10x10.txt  cave_02_20x20.txt  cave_03_50x50.txt  maze_00_4x4.txt  maze_01_10x10.txt  maze_02_10x10.txt  maze_03_20x20.txt
files/incorrect/cave/: 51x51_correct.txt  51x51_just_dimensions.txt  absent_column.txt  cave_00_4x4  empty_matrix.txt  extra_column.txt  extra_endline.txt  no_dimensions.txt  no_space_column.txt  wrong_dimension_col.txt  wrong_dimension_row.txt  wrong_dimensions.txt  wrong_dimensions_count.txt  wrong_element_letter.txt  wrong_element_number.txt
files/incorrect/maze_read/: 51x51_correct.txt  51x51_just_dimensions.txt  absent_column.txt  empty_matrix_both.txt  empty_matrix_horizontal.txt  empty_matrix_vertical.txt  extra_column.txt  extra_endline.txt  no_dimensions.txt  no_space_column.txt  wrong_dimension_col.txt  wrong_dimension_row.txt  wrong_dimensions.txt  wrong_dimensions_count.txt  wrong_element_letter.txt  wrong_element_number.txt  wrong_element_number_horizontal.txt
frontend/: CMakeLists.txt
frontend/functions/: cavewidget.cc  cavewidget.h  fileselector.cc  fileselector.h  mazewidget.cc  mazewidget.h
frontend/view/: mainwindow.cc  mainwindow.h  mainwindow.ui
tests/: unit_tests.cc  unit_tests.h
tests/cave/: correct.cc  incorrect.cc
tests/maze/: generator.cc  read_correct.cc  read_incorrect.cc  solve_correct.cc  solve_incorrect.cc
